--- a/deck_of_cards/index.html
+++ b/deck_of_cards/index.html
@@ -13,6 +13,11 @@
 
     <div class="container">
         <h1>Deck of Cards</h1>
+        <div class="container cards">
+            <div class="deck-of-cards">
+                
+            </div>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.js"
